--- a/assets/js/view/curso/home.html
+++ b/assets/js/view/curso/home.html
@@ -21,7 +21,7 @@
   <section class="section-sm  ">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 pt-5 mt-3">
           <div class="d-flex align-items-center section-title justify-content-between">
             <h2 class="mb-0 text-nowrap mr-3">Licenciatura em Direito</h2>
             <div class="border-top w-100 border-primary d-none d-sm-block"></div>
@@ -178,7 +178,7 @@
   <!-- success story -->
   <section class="section bg-cover" data-background="assets/images/backgrounds/success-story.jpg">
     <div class="container">
-      <div class="row">
+      <div class="row ">
         <div class="col-lg-6 col-sm-4 position-relative success-video">
           <a class="play-btn venobox" href="" data-vbtype="video">
             <i class="ti-control-play"></i>
