--- a/assets/js/view/home/home.html
+++ b/assets/js/view/home/home.html
@@ -106,7 +106,7 @@
             investigação científica e no compromisso social. </p>
           <p>Promovemos um ambiente académico participativo, onde o estudante é o centro do processo de aprendizagem,
             inspirado a pensar criticamente e a contribuir para o desenvolvimento da comunidade.</p>
-          <a href="about.html" class="btn btn-primary-outline">Learn more</a>
+          <a href="#/sobre" class="btn btn-primary-outline">Saber mais</a>
         </div>
         <div class="col-md-6 order-1 order-md-2 mb-4 mb-md-0">
           <img class="img-fluid w-100" src="assets/images/about/about-us.jpg" alt="about image">
@@ -120,7 +120,7 @@
   <section class="bg-gray section-sm">
     <div class="container">
 
-      <div class="row justify-content-between">
+      <div class="row justify-content-between  pt-5 mt-5">
         <div class="col-sm-6 col-xl-3 mb-xl-5 mb-lg-3 mb-4 text-center text-sm-left">
           <i class="ti-pin-alt mb-xl-4 mb-lg-3 mb-4 feature-icon"></i>
           <h3 class="mb-xl-4 mb-lg-3 mb-4">Missão </h3>
@@ -158,7 +158,7 @@
   <section class="section-sm">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12  pt-5 mt-3">
           <div class="d-flex align-items-center section-title justify-content-between">
             <h2 class="mb-0 text-nowrap mr-3">Licenciatura em Direito</h2>
             <div class="border-top w-100 border-primary d-none d-sm-block"></div>
@@ -225,7 +225,7 @@
       <!-- mobile see all button -->
       <div class="row">
         <div class="col-12 text-center">
-          <a href="courses.html" class="btn btn-sm btn-primary-outline d-sm-none d-inline-block">sell all</a>
+          <a href="#/curso" class="btn btn-sm btn-primary-outline d-sm-none d-inline-block">Saber mais</a>
         </div>
       </div>
     </div>
@@ -283,7 +283,7 @@
       <div class="row">
         <div class="col-12">
           <div class="d-flex align-items-center section-title justify-content-between">
-            <h2 class="mb-0 text-nowrap mr-3">EVENTOS Recentes e Próximos</h2>
+            <h2 class="mb-0 text-nowrap mr-3">EVENTOS Recentes </h2>
             <div class="border-top w-100 border-primary d-none d-sm-block"></div>
             <div>
               <a href="#/eventos" class="btn btn-sm btn-primary-outline ml-sm-3 d-none d-sm-block">Ver mais</a>
@@ -356,7 +356,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12">
-          <h2 class="section-title">Nossos Professores e funcionarios</h2>
+          <h2 class="section-title">Nossos Professores <br> e funcionarios</h2>
         </div>
         <!-- teacher -->
         <div class="col-lg-5 col-sm-6 mb-5 mb-lg-0">
