--- a/assets/js/components/footer/home.html
+++ b/assets/js/components/footer/home.html
@@ -22,49 +22,38 @@
     <div class="footer bg-footer section border-bottom">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-sm-8 mb-5 mb-lg-0">
+          <div class="col-lg-5 col-sm-8 mb-2 mb-lg-0">
             <!-- logo -->
             <a class="logo-footer" href="index.html"><img class="img-fluid mb-4 logo" src="assets/images/logo.png"
                 alt="logo"></a>
             <ul class="list-unstyled">
               <li class="mb-2">Município do Chitato,Província da Lunda-Norte, Angola</li>
-              <li class="mb-2">+244 000 000 000</li>
-              <li class="mb-2">+244 000 000 000</li>
-              <li class="mb-2">geral@fdulan.com</li>
+              <li class="mb-2"> <a href="tel:+244929544323" class="text-color h5 d-block "> Tell: +244 929 544 323</a> </li>
+              <li class="mb-2"> <a href="mailto:secretaria-geral@fdulan.ao" class="mb-2 text-color h5 d-block">secretaria-geral@fdulan.ao</a></li>
+               
+          <li class="mb-2"> <a href="mailto:cicaj@fdulan.ao" class="mb-5 text-color h5 d-block">cicaj@fdulan.ao</a></li>
             </ul>
           </div>
           <!-- company -->
-          <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
+          <div class="col-lg-3 col-md-3 col-sm-4 col-6 mb-2 mb-md-0">
             <h4 class="text-white mb-5">UNIVERSIDADE</h4>
             <ul class="list-unstyled">
               <li class="mb-3"><a class="text-color" href="#/sobre">HISTORIA</a></li>
               <li class="mb-3"><a class="text-color" href="#/eventos">EVENTOS & NOTICIA</a></li>
+              <li class="mb-3"><a class="text-color" href="#/contato">CONTACTOS</a></li>
             </ul>
           </div>
           <!-- links -->
-          <div class="col-lg-3 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
+          <div class="col-lg-4 col-md-3 col-sm-4 col-6 mb-2 mb-md-0">
             <h4 class="text-white mb-5">LINKS</h4>
             <ul class="list-unstyled">
               <li class="mb-3"><a class="text-color" href="#/">HOME</a></li>
               <li class="mb-3"><a class="text-color" href="#/curso">CURSO</a></li>
               <li class="mb-3"><a class="text-color" href="#/eventos">EVENTOS & NOTICIA</a></li>
               <li class="mb-3"><a class="text-color" href="#/sobre">HISTORIA</a></li>
-              <li class="mb-3"><a class="text-color" href="#/contato">CONTACTOS</a></li>
             </ul>
           </div>
-
-          <!-- support -->
-          <div class="col-lg-3 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-            <h4 class="text-white mb-5">DIREITO</h4>
-            <ul class="list-unstyled">
-              <li class="mb-3"><a class="text-color"> Civil </a></li>
-              <li class="mb-3"><a class="text-color">Penal</a></li>
-              <li class="mb-3"><a class="text-color">Constitucional</a></li>
-              <li class="mb-3"><a class="text-color">Administrativo</a></li>
-              <li class="mb-3"><a class="text-color">Internacional</a></li>
-              <li class="mb-3"><a class="text-color">Comercial</a></li>
-            </ul>
-          </div>
+ 
         </div>
       </div>
     </div>
