--- a/assets/js/view/contato/home.html
+++ b/assets/js/view/contato/home.html
@@ -2,7 +2,7 @@
 
 
   <!-- page title -->
-  <section class="page-title-section overlay" data-background="images/backgrounds/page-title.jpg">
+  <section class="page-title-section overlay img-contacto" data-background="assets/images/backgrounds/page-title.jpg">
     <div class="container">
       <div class="row">
         <div class="col-md-8">
@@ -22,35 +22,31 @@
   <section class="section bg-gray">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 pb-5">
           <h2 class="section-title">Tem alguma dúvida?</h2>
           <h5>Contacte-nos</h5>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-7 mb-4 mb-lg-0">
-          <form action="#">
-            <input type="text" class="form-control mb-3" id="name" name="name" placeholder="Seu nome">
-            <input type="email" class="form-control mb-3" id="mail" name="mail" placeholder="Seu Email">
-            <input type="text" class="form-control mb-3" id="subject" name="subject" placeholder="Subject">
-            <textarea name="message" id="message" class="form-control mb-3" placeholder="Seu Mensagem"></textarea>
-            <button type="submit" value="send" class="btn btn-primary">ENVIAR MENSAGEM</button>
-          </form>
-        </div>
-        <div class="col-lg-5">
-          <p class="mb-5">A nossa equipa dedicada está pronta para auxiliá-lo com todas as suas questões relacionadas à
-            nossa universidade, desde assuntos académicos até administrativos e financeiros. Valorizamos a sua
-            participação e estamos comprometidos em oferecer um atendimento de excelência, garantindo que tire o máximo
-            proveito da sua experiência connosco.</p>
-          <a href="tel:+2440000000" class="text-color h5 d-block">+244 920 000 000</a>
-          <a href="mailto:geral@fdulan.com" class="mb-5 text-color h5 d-block">geral@fdulan.com</a>
+                <a href="tel:+244929544323" class="text-color h5 d-block mb-3"> Tell: +244 929 544 323</a>
+          <a href="mailto:secretaria-geral@fdulan.ao" class="mb-2 text-color h5 d-block">secretaria-geral@fdulan.ao</a>
+           <a href="mailto:cicaj@fdulan.ao" class="mb-5 text-color h5 d-block">cicaj@fdulan.ao</a>
+           
           <p>
           <h6 class="text-color h5 d-block">Horário</h6>
           <span class="text-color h5 d-block">08H00 às 15H00 -
             Segunda à sexta
           </span>
           </p>
-          <p>Município do Chitato,<br> Província da Lunda-Norte, Angola</p>
+          <p class="mt-5">Município do Chitato,<br> Província da Lunda-Norte, Angola</p>
+        </div>
+        <div class="col-lg-5">
+          <p class="mb-5">A nossa equipa dedicada está pronta para auxiliá-lo com todas as suas questões relacionadas à
+            nossa universidade, desde assuntos académicos até administrativos e financeiros. Valorizamos a sua
+            participação e estamos comprometidos em oferecer um atendimento de excelência, garantindo que tire o máximo
+            proveito da sua experiência connosco.</p>
+   
         </div>
       </div>
     </div>
@@ -60,7 +56,9 @@
   <!-- gmap -->
   <section class="section pt-0">
     <!-- Google Map -->
-    <div id="map_canvas" data-latitude="51.507351" data-longitude="-0.127758"></div>
+    <div id="map_canvas">
+       <div id="map"></div>
+    </div>
   </section>
   <!-- /gmap -->
 
