--- a/assets/js/view/eventos/home.html
+++ b/assets/js/view/eventos/home.html
@@ -1,15 +1,17 @@
 <div>
 
   <!-- page title -->
-  <section class="page-title-section overlay" data-background="assets/images/backgrounds/page-title.jpg">
+  <section class="page-title-section overlay img-evento">
     <div class="container">
       <div class="row">
         <div class="col-md-8">
           <ul class="list-inline custom-breadcrumb">
-            <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="@@page-link">Noticia &  Eventos</a></li>
+            <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="@@page-link">Noticia &
+                Eventos</a></li>
             <li class="list-inline-item text-white h3 font-secondary @@nasted"></li>
           </ul>
-          <p class="text-lighten">Espaço dedicado a divulgar atividades, conquistas e ações da FDULAN, mantendo a comunidade académica e o público informados.</p>
+          <p class="text-lighten">Espaço dedicado a divulgar atividades, conquistas e ações da FDULAN, mantendo a
+            comunidade académica e o público informados.</p>
         </div>
       </div>
     </div>
@@ -17,229 +19,165 @@
   <!-- /page title -->
 
 
-
-
-<!-- blogs -->
-<section class="section">
-  <div class="container">
-    <div class="row">
-      <!-- blog post -->
-      <article class="col-lg-4 col-sm-6 mb-5">
-        <div class="card rounded-0 border-bottom border-primary border-top-0 border-left-0 border-right-0 hover-shadow">
-          <img class="card-img-top rounded-0" src="assets/images/blog/post-1.png" alt="Post thumb">
-          <div class="card-body">
-            <!-- post meta -->
-            <ul class="list-inline mb-3">
-              <!-- post date -->
-              <li class="list-inline-item mr-3 ml-0">Junho 9, 2025</li>
-              <!-- author -->
-              <li class="list-inline-item mr-3 ml-0"> Gabinete de Comunicação Social do Governo Provincial da Lunda-Norte</li>
-            </ul>
-            <a href="blog-single.html">
-              <h4 class="card-title">Governadora incentiva melhoria do ensino na ULAN</h4>
-            </a>
-            <p class="card-text">Filomena Miza Aires encorajou a Universidade Lueji A’Nkonde a investir na melhoria do ensino e apoiou a criação de novos cursos, como engenharias, ciências agrárias, medicina e enfermagem.</p>
-          
-          </div>
-        </div>
-      </article>
-      <!-- blog post -->
-      <article class="col-lg-4 col-sm-6 mb-5">
-        <div class="card rounded-0 border-bottom border-primary border-top-0 border-left-0 border-right-0 hover-shadow">
-          <img class="card-img-top rounded-0" src="assets/images/blog/post-2.jpg" alt="Post thumb">
-          <div class="card-body">
-            <!-- post meta -->
-            <ul class="list-inline mb-3">
-              <!-- post date -->
-              <li class="list-inline-item mr-3 ml-0">Abril 12, 2025</li>
-              <!-- author -->
-              <li class="list-inline-item mr-3 ml-0">Alusão aos 14 anos de existência</li>
-            </ul>
-            <a href="blog-single.html">
-              <h4 class="card-title">Sopa Solidária</h4>
-            </a>
-            <p class="card-text">A FDULAN promoveu a distribuição de refeições quentes à comunidade, reforçando seu compromisso social e incentivando a solidariedade.</p>
-          
-          </div>
-        </div>
-      </article>
-      <!-- blog post -->
-      <article class="col-lg-4 col-sm-6 mb-5">
-        <div class="card rounded-0 border-bottom border-primary border-top-0 border-left-0 border-right-0 hover-shadow">
-          <img class="card-img-top rounded-0" src="assets/images/blog/post-3.png" alt="Post thumb">
-          <div class="card-body">
-            <!-- post meta -->
-            <ul class="list-inline mb-3">
-              <!-- post date -->
-              <li class="list-inline-item mr-3 ml-0">2023</li>
-              <!-- author -->
-              <li class="list-inline-item mr-3 ml-0">Universidade FDULAN</li>
-            </ul>
-            <a href="blog-single.html">
-              <h4 class="card-title">Estudantes da FDULAN participam no V Moot Arbitral 2023.</h4>
-            </a>
-            <p class="card-text">Estudantes da FDULAN marcam presença no V Moot Arbitral 2023, em Luanda, sob coordenação de docentes da instituição.</p>
-          
-          </div>
-        </div>
-      </article>
-      <!-- blog post -->
-      <article class="col-lg-4 col-sm-6 mb-5">
-        <div class="card rounded-0 border-bottom border-primary border-top-0 border-left-0 border-right-0 hover-shadow">
-          <img class="card-img-top rounded-0" src="assets/images/blog/post-8.jpg" alt="Post thumb">
-          <div class="card-body">
-            <!-- post meta -->
-            <ul class="list-inline mb-3">
-              <!-- post date -->
-              <li class="list-inline-item mr-3 ml-0">Dezembro 28, 2024</li>
-              <!-- author -->
-              <li class="list-inline-item mr-3 ml-0">Universidade FDULAN</li>
-            </ul>
-            <a href="blog-single.html">
-              <h4 class="card-title">Defesas de TCC na FDULAN</h4>
-            </a>
-            <p class="card-text">Finalistas apresentam seus trabalhos de conclusão, demonstrando conhecimentos adquiridos e contribuindo para a produção científica da faculdade</p>
-          
-          </div>
-        </div>
-      </article>
-      <!-- blog post -->
-      <article class="col-lg-4 col-sm-6 mb-5">
-        <div class="card rounded-0 border-bottom border-primary border-top-0 border-left-0 border-right-0 hover-shadow">
-          <img class="card-img-top rounded-0" src="assets/images/blog/post-13.jpg" alt="Post thumb">
-          <div class="card-body">
-            <!-- post meta -->
-            <ul class="list-inline mb-3">
-              <!-- post date -->
-              <li class="list-inline-item mr-3 ml-0">Novembro 22, 2024</li>
-              <!-- author -->
-              <li class="list-inline-item mr-3 ml-0">Universidade FDULAN</li>
-            </ul>
-            <a href="blog-single.html">
-              <h4 class="card-title">INFORMAÇÃO-FDULAN</h4>
-            </a>
-            <p class="card-text">Muntual Manuel, estudante do 3.º ano e Presidente da Associação de Estudantes da FDULAN, ficou em segundo lugar na 4.ª edição do concurso “Eu Conheço Contratação Públic</p>
-          
-          </div>
-        </div>
-      </article>
-      <!-- blog post -->
-      <article class="col-lg-4 col-sm-6 mb-5">
-        <div class="card rounded-0 border-bottom border-primary border-top-0 border-left-0 border-right-0 hover-shadow">
-          <img class="card-img-top rounded-0" src="assets/images/blog/post-9.jpg" alt="Post thumb">
-          <div class="card-body">
-            <!-- post meta -->
-            <ul class="list-inline mb-3">
-              <!-- post date -->
-              <li class="list-inline-item mr-3 ml-0">2025</li>
-              <!-- author -->
-              <li class="list-inline-item mr-3 ml-0">Universidade FDULAN</li>
-            </ul>
-            <a href="blog-single.html">
-              <h4 class="card-title">FDULAN na Expo Dundo 2025</h4>
-            </a>
-            <p class="card-text">A FDULAN participa na Expo Dundo 2025, divulgando seus cursos e projetos à comunidade.</p>
-          
-          </div>
-        </div>
-      </article>
-    </div>
-  </div>
-</section>
-<!-- /blogs -->
-
-
-  <!-- eventos -->
-  <section class="section">
+  <!-- events -->
+  <section class="section bg-gray">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <div class="d-flex align-items-center section-title justify-content-between">
-            <h2 class="mb-0 text-nowrap mr-3">EVENTOS </h2>
+            <h2 class="mb-0 text-nowrap mr-3">EVENTOS Recentes </h2>
             <div class="border-top w-100 border-primary d-none d-sm-block"></div>
-            <div>
-              <a href="events.html" class="btn btn-sm btn-primary-outline ml-sm-3 d-none d-sm-block">see all</a>
-            </div>
+           
           </div>
         </div>
       </div>
-      <div class="row  ">
-        <!-- event -->
-        <div class="col-lg-7 col-sm-6 mb-5 mb-lg-0">
-          <div class="row  ">
-            <div class="col-lg-6 col-sm-6 mb-5 mb-lg-0">
-              <div class="card border-0 rounded-0 hover-shadow">
-                <div class="card-img position-relative">
-                  <img class="card-img-top rounded-0" src="assets/images/events/event-1.jpg" alt="event thumb">
-                  <div class="card-date"><span>18</span><br>Abril</div>
-                </div>
-                <div class="card-body">
-                  <!-- location -->
-                  <p><i class="ti-location-pin text-primary mr-2"></i>Universidade FDULAN</p>
-                  <a href="">
-                    <h4 class="card-title">tema. a criminalidade em angola </h4>
-                  </a>
-                </div>
-              </div>
-            </div>
-            <!-- event -->
-            <div class="col-lg-6 col-sm-6 mb-5 mb-lg-0">
-              <div class="card border-0 rounded-0 hover-shadow">
-                <div class="card-img position-relative">
-                  <img class="card-img-top rounded-0" src="assets/images/events/event-4.jpg" alt="event thumb">
-                  <div class="card-date"><span>11</span><br>Abril</div>
-                </div>
-                <div class="card-body">
-                  <!-- location -->
-                  <p><i class="ti-location-pin text-primary mr-2"></i>Universidade FDULAN</p>
-                  <a href="">
-                    <h4 class="card-title">Celebra mais um ano de existência</h4>
-                  </a>
-                </div>
-              </div>
-            </div>
 
-            <!-- event -->
-            <div class="col-lg-6 col-sm-6 mb-5 mb-lg-0">
-              <div class="card border-0 rounded-0 hover-shadow">
-                <div class="card-img position-relative">
-                  <img class="card-img-top rounded-0" src="assets/images/events/event-3.jpg" alt="event thumb">
-                  <div class="card-date"><span>20</span><br>Novemb</div>
-                </div>
-                <div class="card-body">
-                  <!-- location -->
-                  <p><i class="ti-location-pin text-primary mr-2"></i>Universidade FDULAN</p>
-                  <a href="">
-                    <h4 class="card-title">Momento da defesa de novos Formados</h4>
-                  </a>
-                </div>
-              </div>
+      <div class="row">
+        <!-- blog post -->
+        <article class="col-lg-6 col-sm-6 mb-5">
+          <div class="event-card big">
+            <img src="assets/images/events/post-11.jpg" alt="Semana Acadêmica">
+            <div class="overlay2"></div>
+            <div class="event-content ">
+              <h3 class="text-white"> Governadora incentiva melhoria do ensino na ULAN</h3>
+              <p class="text-white">Filomena Miza Aires encorajou a Universidade Lueji A’Nkonde a investir na melhoria do ensino e apoiou a criação de novos cursos, como engenharias, ciências agrárias, medicina e enfermagem.</p>
+              <div class="event-info"><i class="ti-location-pin text-primary"></i> Campus FDULAN | 📅 9 Junho, 2025</div>
+              <a href="#" class="btn">SABER MAIS</a>
             </div>
           </div>
-        </div>
-        <!-- event -->
-        <div class="col-lg-5 col-sm-6 mb-5 mb-lg-0">
-          <div class="card border-0 rounded-0 hover-shadow">
-            <div class="card-img position-relative">
-              <img class="card-img-top rounded-0" src="assets/images/events/event-2.jpg" alt="event thumb">
-              <div class="card-date"><span>21</span><br>December</div>
-            </div>
-            <div class="card-body">
-              <!-- location -->
-              <p><i class="ti-location-pin text-primary mr-2"></i>Universidade FDULAN</p>
-              <a href="">
-                <h4 class="card-title">Estudantes da FDULAN, participam no V MOOT ARBITRAL 2023</h4>
-              </a>
+        </article>
+
+        <article class="col-lg-3 col-sm-6 mb-5">
+          <div class="event-card small">
+            <img src="assets/images/events/event-1.jpg" alt="Revista Científica">
+            <div class="event-content">
+              <h4 class="card-title">A criminalidade em angola </h4>
+              <p>Data: 18 de Abril </p>
+              <p><i class="ti-location-pin text-primary mr-2"></i>FDULAN</p>
+              <a href="#" class="btn">LER MAIS</a>
             </div>
           </div>
-        </div>
+        </article>
+        <article class="col-lg-3 col-sm-6 mb-5">
 
+          <!-- Card pequeno -->
+          <div class="event-card small">
+            <img src="assets/images/events/event-4.jpg" alt="Lançamento Vol. 1">
+            <div class="event-content">
+              <h4 class="card-title">Celebra mais um ano de existência</h4>
+              <p>Data: 11 de Abril</p>
+              <p><i class="ti-location-pin text-primary mr-2"></i>FDULAN</p>
+              <a href="#" class="btn">LER MAIS</a>
+            </div>
+          </div>
+        </article>
+ 
+  
+
+        <article class="col-lg-3 col-sm-6 mb-5">
+          <div class="event-card small">
+            <img src="assets/images/events/post-2.jpg" alt="Revista Científica">
+            <div class="event-content">
+              <h4 class="card-title">Sopa Solidária</h4>
+              <p>Data: 12 Abril, 2025 </p>
+              <p><i class="ti-location-pin text-primary mr-2"></i>FDULAN</p>
+              <a href="#" class="btn">LER MAIS</a>
+            </div>
+          </div>
+        </article>
+        <article class="col-lg-3 col-sm-6 mb-5">
+          <!-- Card pequeno -->
+          <div class="event-card small">
+            <img src="assets/images/events/post-9.jpg" alt="Lançamento Vol. 1">
+            <div class="event-content">
+              <h4 class="card-title">FDULAN na Expo Dundo 2025</h4>
+              <p>Data: Abril 2025</p>
+              <p><i class="ti-location-pin text-primary mr-2"></i>FDULAN</p>
+              <a href="#" class="btn">LER MAIS</a>
+            </div>
+          </div>
+        </article>
+ 
+        <!-- blog post -->
+        <article class="col-lg-6 col-sm-6 mb-5">
+          <div class="event-card big">
+            <img src="assets/images/events/event-2.png" alt="Semana Acadêmica">
+            <div class="overlay2"></div>
+            <div class="event-content ">
+              <h3 class="text-white"> V Moot Arbitral 2023.</h3>
+              <p class="text-white">Estudantes da FDULAN marcam presença no V Moot Arbitral 2023, em Luanda, sob
+                coordenação de docentes da instituição.</p>
+              <div class="event-info"><i class="ti-location-pin text-primary"></i> Campus FDULAN | 📅 9 Maio 2023</div>
+              <a href="#" class="btn">SABER MAIS</a>
+            </div>
+          </div>
+        </article>
       </div>
     </div>
-
-
-
   </section>
-  <!-- /eventos -->
+  <!-- /events -->
+
+  <!-- blogs -->
+  <section class="section">
+    <div class="container">
+      <div class="row">
+         <div class="col-12">
+          <div class="d-flex align-items-center section-title justify-content-between">
+            <h2 class="mb-0 text-nowrap mr-3">Eventos deste mês </h2>
+            <div class="border-top w-100 border-primary d-none d-sm-block"></div>
+           
+          </div>
+        </div>
+        
+        <!-- blog post -->
+        <article class="col-lg-4 col-sm-6 mb-5">
+          <div
+            class="card rounded-0 border-bottom border-primary border-top-0 border-left-0 border-right-0 hover-shadow">
+            <img class="card-img-top rounded-0" src="assets/images/blog/post-8.jpg" alt="Post thumb">
+            <div class="card-body">
+              <!-- post meta -->
+              <ul class="list-inline mb-3">
+                <!-- post date -->
+                <li class="list-inline-item mr-3 ml-0">Dezembro 28, 2024</li>
+                <!-- author -->
+                <li class="list-inline-item mr-3 ml-0">Universidade FDULAN</li>
+              </ul>
+              <a href="blog-single.html">
+                <h4 class="card-title">Defesas de TCC na FDULAN</h4>
+              </a>
+              <p class="card-text">Finalistas apresentam seus trabalhos de conclusão, demonstrando conhecimentos
+                adquiridos e contribuindo para a produção científica da faculdade</p>
+
+            </div>
+          </div>
+        </article>
+        <!-- blog post -->
+        <article class="col-lg-4 col-sm-6 mb-5">
+          <div
+            class="card rounded-0 border-bottom border-primary border-top-0 border-left-0 border-right-0 hover-shadow">
+            <img class="card-img-top rounded-0" src="assets/images/blog/post-13.jpg" alt="Post thumb">
+            <div class="card-body">
+              <!-- post meta -->
+              <ul class="list-inline mb-3">
+                <!-- post date -->
+                <li class="list-inline-item mr-3 ml-0">Novembro 22, 2024</li>
+                <!-- author -->
+                <li class="list-inline-item mr-3 ml-0">Universidade FDULAN</li>
+              </ul>
+              <a href="blog-single.html">
+                <h4 class="card-title">INFORMAÇÃO-FDULAN</h4>
+              </a>
+              <p class="card-text">Muntual Manuel, estudante do 3.º ano e Presidente da Associação de Estudantes da
+                FDULAN, ficou em segundo lugar na 4.ª edição do concurso “Eu Conheço Contratação Públic</p>
+
+            </div>
+          </div>
+        </article>
+      
+      </div>
+    </div>
+  </section>
+  <!-- /blogs -->
+
 
 </div>
