--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 [MAIN STYLESHEET]
 
 PROJECT:	Project Name
-VERSION:	Versoin Number images
+VERSION:	Versoin Number .section
 -------------------------------------------------------------------*/
 /*------------------------------------------------------------------
 [TABLE OF CONTENTS]
@@ -318,7 +318,7 @@ a h4:hover {
 }
 
 .section {
-  padding-top: 90px;
+  padding-top: 50px;
   padding-bottom: 90px;
 }
 
@@ -516,6 +516,10 @@ textarea.form-control {
 #map_canvas {
   height: 500px;
 }
+ #map {
+      height: 100vh;  /* ocupa toda a tela */
+      width: 100%;
+    }
 
 .top-header {
   font-size: 12px;
@@ -536,8 +540,9 @@ textarea.form-control {
 
 @media (max-width: 991px) {
   .header {
-    position: static !important;
-    background: #1a1a37;
+    position: static !important; 
+     /*  background: #1a1a37; */
+     background:  #1a1a37;;
   }
 }
 
@@ -550,6 +555,7 @@ textarea.form-control {
   .navigation {
     background-image: linear-gradient(to right, transparent 70%, #9f3d51 30%);
   }
+
 }
 
 .navbar-nav {
@@ -790,7 +796,7 @@ link:focus,
   margin-top: -100px;
   padding-left: 70px;
   padding-top: 80px;
-  padding-right: 20%;
+  padding-right: 10%;
 }
 
 @media (max-width: 1400px) {
@@ -962,6 +968,12 @@ link:focus,
   .newsletter-block {
     padding-left: 15px;
   }
+
+  
+.hero-section {
+   padding: 130px 0 140px;
+}
+
 }
 
 .input-wrapper {
