--- a/assets/js/components/menu/home.html
+++ b/assets/js/components/menu/home.html
@@ -6,7 +6,7 @@
       <div class="container">
         <div class="row no-gutters">
           <div class="col-lg-4 text-center text-lg-left">
-            <a class="text-color mr-3" href="callto:+2440000000"><strong>TELL</strong> +244 000 000 000</a>
+            <a class="text-color mr-3" href="callto:+244929544323"><strong>TELL</strong> +244 929 544 323</a>
             <ul class="list-inline d-inline">
               <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="#"><i
                     class="ti-facebook"></i></a></li>
@@ -21,8 +21,10 @@
           <div class="col-lg-8 text-center text-lg-right">
             <ul class="list-inline">
               <li class="list-inline-item"><a class="text-uppercase text-color p-sm-2 py-2 px-0 d-inline-block"
-                  href="#/eventos">noticia</a></li> 
-              <li class="list-inline-item">Rigor, Qualidade e Modernidade</li>
+                  href="#/eventos">Noticia</a></li> 
+                      <li class="list-inline-item"><a class="text-uppercase text-color p-sm-2 py-2 px-0 d-inline-block"
+                  href="#/contato">Contacto</a></li>   
+              <li class="list-inline-item"><span>Formar com competência, Fortalecer o Estado e apoia a comunidade </span></li>
             </ul>
           </div>
         </div>
@@ -51,13 +53,12 @@
                 <a class="nav-link" href="#/curso">CURSO</a>
               </li>
               <li class="nav-item @@events">
-                <a class="nav-link" href="#/eventos">NOTICIA</a>
+                <a class="nav-link" href="#/eventos">EVENTOS</a>
               </li>
-               
-             
-              <li class="nav-item @@contact">
-                <a class="nav-link" href="#/contato">CONTACTOS</a>
+               <li class="nav-item @@events">
+                <a class="nav-link" href="#/">CICAJ</a>
               </li>
+           
             </ul>
           </div>
         </nav>
