--- a/assets/js/view/curso/home.html
+++ b/assets/js/view/curso/home.html
@@ -1,6 +1,6 @@
 <div>
    <!-- page title -->
-  <section class="page-title-section overlay" data-background="assets/images/backgrounds/page-title.jpg">
+  <section class="page-title-section overlay img-curso" data-background="assets/images/backgrounds/page-title.jpg">
     <div class="container">
       <div class="row">
         <div class="col-md-8">
@@ -176,7 +176,7 @@
   <!-- /cta -->
 
   <!-- success story -->
-  <section class="section bg-cover" data-background="assets/images/backgrounds/success-story.jpg">
+  <section class="section bg-cover  img-stagio">
     <div class="container">
       <div class="row ">
         <div class="col-lg-6 col-sm-4 position-relative success-video">
