--- a/assets/js/view/sobre/home.html
+++ b/assets/js/view/sobre/home.html
@@ -2,7 +2,7 @@
 
 
   <!-- page title -->
-  <section class="page-title-section overlay" data-background="assets/images/backgrounds/page-title.jpg">
+  <section class="page-title-section overlay img-nos" data-background="assets/images/backgrounds/page-title.jpg">
     <div class="container">
       <div class="row">
         <div class="col-md-8">
@@ -137,23 +137,25 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12">
-          <h2 class="section-title">Nossos Professores e funcionarios</h2>
+          <h2 class="section-title">Nossos Professores <br> e funcionarios</h2>
         </div>
         <!-- teacher -->
         <div class="col-lg-5 col-sm-6 mb-5 mb-lg-0">
-          <div class="card border-0 rounded-0 hover-shadow">
-            <img class="card-img-top rounded-0" src="assets/images/teachers/teacher-1.jpg" alt="teacher">
-            
+          <div class="card border-0 rounded-0 hover-shadow" style="height: 500px;">
+            <img class="card-img-top rounded-0" style="height: 100%;" src="assets/images/teachers/teacher-1.jpg"
+              alt="teacher">
+
           </div>
         </div>
         <!-- teacher -->
         <div class="col-lg-7 col-sm-6 mb-5 mb-lg-0">
-          <div class="card border-0 rounded-0 hover-shadow">
-            <img class="card-img-top rounded-0" src="assets/images/teachers/teacher-2.jpg" alt="teacher">
-            
+          <div class="card border-0 rounded-0 hover-shadow" style="height: 500px;">
+            <img class="card-img-top rounded-0" style="height: 100%;" src="assets/images/teachers/teacher-2.jpg"
+              alt="teacher">
+
           </div>
         </div>
-         
+
       </div>
     </div>
   </section>
