--- a/assets/js/view/curso/home.html
+++ b/assets/js/view/curso/home.html
@@ -23,7 +23,7 @@
       <div class="row">
         <div class="col-12 pt-5 mt-3">
           <div class="d-flex align-items-center section-title justify-content-between">
-            <h2 class="mb-0 text-nowrap mr-3">Licenciatura em Direito</h2>
+          <h2 class="section-title mr-3">Licenciatura em <span>Direito</span></h2>
             <div class="border-top w-100 border-primary d-none d-sm-block"></div>
 
           </div>
@@ -84,11 +84,7 @@
       </div>
       <!-- /course list -->
       <!-- mobile see all button -->
-      <div class="row">
-        <div class="col-12 text-center">
-          <a href="courses.html" class="btn btn-sm btn-primary-outline d-sm-none d-inline-block">sell all</a>
-        </div>
-      </div>
+  
     </div>
   </section>
   <!-- /courses -->
@@ -116,7 +112,7 @@
               </div>
 
               <div class="row">
-                <div class="col-3">
+                <div class="col-lg-3">
                   <h5 class="mb-4">Fornecer conhecimentos jurídicos essenciais</h5>
                   <ul class="list-styled mb-5">
                     <li>Transmitir aos alunos a base do conhecimento jurídico e as principais ferramentas que um jurista
@@ -125,7 +121,7 @@
                       aprofunde áreas específicas de interesse.</li>
                 </div>
 
-                <div class="col-3">
+                <div class="col-lg-3">
                   <h5 class="mb-4">Valorizar a formação integral</h5>
                   <ul class="list-styled mb-5">
                     <li>Equilibrar a formação técnico-jurídica com o desenvolvimento ético, humanista e cultural.</li>
@@ -134,7 +130,7 @@
                     </li>
                 </div>
 
-                <div class="col-3">
+                <div class="col-lg-3">
                   <h5 class="mb-4">Desenvolver competências técnicas e humanas</h5>
                   <ul class="list-styled mb-5">
                     <li>Capacitar o estudante com sólidos conhecimentos jurídicos, pensamento analítico, sensibilidade
@@ -143,7 +139,7 @@
                       Direito numa Angola democrática e em sintonia com um mundo globalizado.</li>
                 </div>
 
-                <div class="col-3">
+                <div class="col-lg-3">
                   <h5 class="mb-4">Contribuir para a construção de um Estado de Direito</h5>
                   <ul class="list-styled mb-5">
                     <li>Formar profissionais com competências técnicas, atitudes e valores éticos que os capacitem como
