--- a/assets/js/view/sobre/home.html
+++ b/assets/js/view/sobre/home.html
@@ -2,7 +2,7 @@
 
 
   <!-- page title -->
-  <section class="page-title-section overlay img-nos" data-background="assets/images/backgrounds/page-title.jpg">
+  <section class="page-title-section overlay img-nos" >
     <div class="container">
       <div class="row">
         <div class="col-md-8">
@@ -23,8 +23,7 @@
   <section class="section">
     <div class="container">
       <div class="row">
-        <div class="col-12">
-          <img class="img-fluid w-100 mb-4" src="assets/images/about/about-page.jpg" alt="about image">
+        <div class="col-12"> 
           <h2 class="section-title">Nossa História</h2>
           <p>A <b>Faculdade de Direito da Universidade Lueji A’Nkonde (FDULAN)</b> nasceu com o propósito de responder às necessidades formativas de uma Angola em constante transformação, formando juristas preparados para atuar com competência, ética e visão crítica.</p>
           <p>Localizada no município do <b>Chitato</b>, província da <b>Lunda-Norte</b>, a FDULAN integra a Universidade Lueji A’Nkonde, criada ao abrigo do <b>Decreto Presidencial n.º 188/09, de 21 de agosto</b>, como parte de um projeto nacional de expansão e fortalecimento do ensino superior.</p>
@@ -111,7 +110,7 @@
   <!-- /funfacts -->
 
   <!-- success story -->
-  <section class="section bg-cover" data-background="./assets/images/backgrounds/success-story.jpg">
+  <section class="section bg-cover img-stagio2">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 col-sm-4 position-relative success-video">
