--- a/assets/js/view/home/home.html
+++ b/assets/js/view/home/home.html
@@ -217,7 +217,7 @@
       <div class="row">
         <div class="col-12  pt-5 mt-3">
           <div class="d-flex align-items-center section-title justify-content-between">
-            <h2 class="mb-0 text-nowrap mr-3">Licenciatura em Direito</h2>
+               <h2 class="section-title mr-3">Licenciatura em <span>Direito</span></h2>
             <div class="border-top w-100 border-primary d-none d-sm-block"></div>
             <div>
               <a href="courses.html" class="btn btn-sm btn-primary-outline ml-sm-3 d-none d-sm-block">Saber mais</a>
