--- a/assets/js/view/home/home.html
+++ b/assets/js/view/home/home.html
@@ -401,9 +401,7 @@
   <section class="section">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-12">
-          <h2 class="section-title">Nossos Professores <br> e funcionarios</h2>
-        </div>
+      
         <!-- teacher -->
         
 
@@ -421,7 +419,7 @@
               <i class="fa-solid fa-star"></i>
             </div>
           </div>
-          <h4 class="text-uppercase mb-2">Carlos Pinto</h4>
+          <h4 class="text-uppercase mb-2 nome-texte">Carlos Pinto</h4>
           <i class="mb-2">Estudante de Direito</i>
           <p class="m-0">
             Como estudante de Direito na Universidade FDULAN, posso dizer que estou extremamente satisfeito com minha experiência acadêmica. A universidade oferece um currículo abrangente, com professores altamente qualificados que são especialistas em suas áreas."</p>
@@ -440,7 +438,7 @@
               <i class="fa-solid fa-star"></i>
             </div>
           </div>
-          <h4 class="text-uppercase mb-2">Joana Almeida</h4>
+          <h4 class="text-uppercase mb-2 nome-texte">Joana Almeida</h4>
           <i class="mb-2">Estudante de Direito</i>
           <p class="m-0">A experiência foi enriquecedora, tanto no crescimento pessoal quanto profissional. Professores dedicados e colegas inspiradores criaram um ambiente incrível de aprendizagem.</p>
         </div>
@@ -458,7 +456,7 @@
               <i class="fa-solid fa-star"></i>
             </div>
           </div>
-          <h4 class="text-uppercase mb-2">António Lopes</h4>
+          <h4 class="text-uppercase mb-2 nome-texte">António Lopes</h4>
           <i class="mb-2">Estudante de Direito</i>
           <p class="m-0">
             As aulas são dinâmicas e envolventes, promovendo debates e discussões que enriquecem nosso entendimento do sistema legal e das questões jurídicas atuais.</p>
