--- a/assets/js/view/eventos/home.html
+++ b/assets/js/view/eventos/home.html
@@ -173,7 +173,69 @@
             </div>
           </div>
         </article>
-      
+      </div>
+
+
+    <div class="row p-2">
+ 
+          <div class="d-flex align-items-center section-title justify-content-between">
+            <h2 class="mb-0 text-nowrap mr-3">Cerimônia de outorga</h2>
+            <div class="border-top w-100 border-primary d-none d-sm-block"></div>
+           
+          </div>
+ 
+         <!-- Swiper -->
+  <div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (2).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (3).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (4).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (5).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (6).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (7).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (8).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (9).jpeg" />
+      </div>
+            <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (11).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (12).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (1).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (13).jpeg" />
+      </div>
+            <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (14).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (15).jpeg" />
+      </div>
+      <div class="swiper-slide">
+        <img src="assets/images/scholarship/entrega (16).jpeg" />
+      </div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+  
       </div>
     </div>
   </section>
