--- a/assets/js/view/home/home.html
+++ b/assets/js/view/home/home.html
@@ -4,11 +4,13 @@
   <!-- hero slider Excelência -->
   <section class="hero-section overlay bg-cover  img-slide">
     <div class="container">
-      <div id="my-keen-slider" class="keen-slider">
-        <div class="keen-slider__slide">
-          <!-- slider item -->
-          <div class="row">
-            <div class="col-md-8">
+
+
+  <!-- Swiper -->
+  <div class="swiper mySwiper">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <div class="col-md-8">
               <h1 class="text-white" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3"
                 data-animation-in="fadeInLeft" data-delay-in=".1">Seu futuro brilhante é nossa missão</h1>
               <p class="text-muted mb-4" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3"
@@ -17,11 +19,10 @@
               <a href="#/contato" class="btn btn-primary" data-animation-out="fadeOutRight" data-delay-out="5"
                 data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".7">Inscreva-se agora</a>
             </div>
-          </div>
-        </div>
-        <div class="keen-slider__slide">
-          <div class="row">
-            <div class="col-md-8">
+      </div>
+      
+      <div class="swiper-slide">
+          <div class="col-md-8">
               <h1 class="text-white" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3"
                 data-animation-in="fadeInUp" data-delay-in=".1"> Excelência no Ensino Jurídico</h1>
               <p class="text-muted mb-4" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3"
@@ -30,11 +31,9 @@
               <a href="#/contato" class="btn btn-primary" data-animation-out="fadeOutDown" data-delay-out="5"
                 data-duration-in=".3" data-animation-in="zoomIn" data-delay-in=".7">Inscreva-se agora</a>
             </div>
-          </div>
-        </div>
-        <div class="keen-slider__slide">
-          <div class="row">
-            <div class="col-md-8">
+      </div>
+      <div class="swiper-slide">
+          <div class="col-md-8">
               <h1 class="text-white" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3"
                 data-animation-in="fadeInUp" data-delay-in=".1"> Eventos e Oportunidades</h1>
               <p class="text-muted mb-4" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3"
@@ -43,9 +42,11 @@
               <a href="#/contato" class="btn btn-primary" data-animation-out="fadeOutDown" data-delay-out="5"
                 data-duration-in=".3" data-animation-in="zoomIn" data-delay-in=".7">Inscreva-se agora</a>
             </div>
-          </div>
-        </div>
-      </div>
+      </div> 
+    </div>
+ 
+  </div>
+ 
     </div>
   </section>
   <!-- /hero slider -->
