--- a/assets/css/propio.css
+++ b/assets/css/propio.css
@@ -1,3 +1,32 @@
+
+ /*** Slider***/
+
+
+ .swiper {
+     width: 100%;
+     padding-top: 0px;
+     padding-bottom: 0px;
+ }
+
+ .swiper-slide_site {
+     height: 950px;
+ }
+
+ .swiper-slide {
+     background-position: center;
+     background-size: cover;
+     width: 500px;
+ }
+
+ .swiper-slide .img_flayer {
+     display: block;
+     width: 80%;
+     margin: 50px;
+ }
+ 
+ /*** Fim  Slider***/
+
+ 
 .logo {
   width: 20%;
   padding: 10px;
@@ -271,13 +300,11 @@ span {
  }
 
  .swiper {
-   width: 100%;
-   height: 329px;
+   width: 100%; 
    padding-bottom: 60px;
  }
 
- .swiper-slide {
-   background-color: #fff;
+ .swiper-slide { 
    display: flex;
    flex-direction: column;
    gap: 18px;
